[package]
name = "blurz"
version = "0.4.0"
description = "Bluetooth lib for Rust using blueZ/dbus"
readme = "README.md"
authors = ["Attila Dusnoki <adusnoki@inf.u-szeged.hu>"]
repository = "https://github.com/szeged/blurz"
keywords = ["bluetooth", "bluez", "ble"]
license = "BSD-2-Clause"
edition = "2021"

[lib]
name = "blurz"
path = "src/lib.rs"

[dependencies]
dbus = "0.9.5"
hex = "0.4.3"
thiserror = "1.0.31"
derivative = "2.2.0"